# carpeta-tributaria-intelligence

./: .coverage  .gitignore  README.md  pyproject.toml
app/: README.md  main.py
app/components/: activities.py  alerts.py  company_info.py  corporate_info.py  downloads.py  export_data.py  f22_summary.py  kpi_cards.py  monthly_chart.py  representatives.py
app/utils/: exporter.py  formatting.py  pdf_processor.py
docs/: ARCHITECTURE.md  BACKLOG.md
scripts/: analyze_examples.py  benchmark.py  discover_f29_codes.py  generate_report.py  parse_folder.py  test_extractor.py  validate_dataset.py  validate_extraction.py
src/: app.py  cli.py
src/analyzers/: analysis_result.py  tax_analyzer.py
src/components/: f22_summary.py
src/core/: tax_folder_engine.py
src/detectors/: section_detector.py
src/exporters/: json_exporter.py
src/extractors/: pdf_extractor.py
src/kpis/: kpi_engine.py  kpi_result.py
src/mappers/: tax_folder_mapper.py
src/models/: activity.py  (+9 more)
tests/: test_cli.py  test_contributor_normalizer.py  test_contributors_parser.py  test_economic_activities_parser.py  test_executive_report.py  test_exporter.py  test_f22_parser.py  test_f22_parser_integration.py  test_f29_financial_parser.py  test_f29_financial_parser_integration.py  test_f29_normalizer.py  test_f29_parser.py  test_json_exporter.py  test_kpi_engine.py  test_monthly_tax_service.py  test_normalizers.py  test_rule_engine.py  test_section_detector.py  test_snapshots.py  test_tax_analyzer.py  test_tax_folder_engine.py  test_tax_folder_mapper.py  test_tax_rules.py  test_validate_dataset.py
(+19 files in other folders)
