[tool.poetry]
name = "carpeta-tributaria"
version = "0.1.0"
description = "Extracción y análisis de carpetas tributarias"
authors = ["Jose Alfonso Rossel <josealfonsorossel@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pdfplumber = "^0.11"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
mypy = "^1.0"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
